fixes date/time overflow on tickets page

--- a/static/css/compsoc.css
+++ b/static/css/compsoc.css
@@ -277,7 +277,7 @@ a:hover {
 .resize {
     float: left;
     width: 25em;
-    height: 4em;
+    height: 5em;
     margin: 1em;
 }
 
